--- a/index.html
+++ b/index.html
@@ -4,18 +4,11 @@
 <head>
 
     <title>Complete Image Slider</title>
-
-    <!-- BoxIcons v2.1.2 -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
-
-    <!-- Kanit Font -->
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,500;0,600;0,700;0,800;0,900;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-
-    <!-- CSS File -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-
 <body>
 
     <div class="slider">
@@ -45,7 +38,25 @@
 
     </div>
 
-    <!-- JS File -->
+    <div class="ensakn">Enes Akan</div>
+
+    <div class="ensakn2">
+
+        <a href="https://enesakan.com/" target="_blank"><ion-icon name="globe-outline"></ion-icon></a>
+
+        <a href="mailto:enesakan2014@gmail.com" target="_blank"><ion-icon name="logo-google"></ion-icon></a>
+
+        <a href="https://github.com/eneesakan" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+
+        <a href="https://www.linkedin.com/in/eneesakan/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+
+        <a href="https://www.instagram.com/eneesakan/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+
+        <a href="https://twitter.com/eneesakan" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
+
+    </div>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 
 </body>
